Fix print share styling - lack of vertical alignment.

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -248,8 +248,8 @@ header {
 
 	p.printShare {
 		font-size: 1em;
-		line-height: 1.0em;
-		height: 1em;
+		line-height: 1.4em;
+		height: 1.4em;
 		clear: both;
 		margin: 1.385em 0;
 
@@ -259,8 +259,8 @@ header {
 			border: 0;
 			font-size: 1em;
 			font-weight: normal;
-			line-height: 1em;
-			height: 1em;
+			line-height: 1.4em;
+			height: 1.4em;
 			vertical-align: baseline;
 			color: $linkColor;
 
